# newsletter

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile
.cargo/: config.toml
.github/workflows/: audit.yml  general.yml
configuration/: base.yaml
migrations/: 20260403113638_make_status_not_null_in_subscriptions.sql  20260403120212_create_subcription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs  subscriptions_confirm.rs
